<resources>
    <string name="app_name">MedicAll</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Login into Apps</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="register">Register here</string>
    <string name="border">__________________________________________________</string>
    <string name="regisButton">REGISTER</string>
    <string name="btnLogin">Login here</string>
    <string name="medicall">Medic.all</string>
    <string name="sign_out">Keluar</string>
    <string name="email_error_message">Format email salah</string>
    <string name="password_error_message">Password harus lebih dari 6 karakter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_scan_fragment">scan</string>

    <!-- Chat Firebase -->
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>

    <!-- Bottom Nav -->
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="scan">Scans</string>
    <string name="chat">Chats</string>
    <string name="wback">"Welcome,"</string>
    <string name="username">username</string>
    <string name="logout">Keluar</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="obat">Obat</string>
    <string name="penggunaan">Penggunaan</string>

    <string name="tv_take_photo">Take photo</string>
    <string name="tv_description">Select a preset image or take a new photo</string>
    <string name="tv_placeholder">Object detection demo</string>

</resources>