<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23355F"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="622dp"
            android:src="@drawable/gambar1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="383dp"
            android:layout_height="65dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-580dp"
            android:layout_marginEnd="15dp"
            android:textColorHint="#6477A1"
            android:layout_marginBottom="514dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2E3E68"
                android:hint="Search"
                android:textColor="#6477A1"
                android:textColorHighlight="#6477A1"
                android:textColorHint="#6477A1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="448dp"
            android:backgroundTint="#3A4D7F"
            android:text="@string/konsultasi" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="448dp"
            android:backgroundTint="#3A4D7F"
            android:text="@string/obat" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="448dp"
            android:backgroundTint="#3A4D7F"
            android:text="@string/penggunaan" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="395dp"
            android:text="Seminar Kesehatan"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="376dp"
            android:layout_height="385dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/prototypeseminar" />


    </RelativeLayout>

</FrameLayout>